--- a/css/styles.css
+++ b/css/styles.css
@@ -21,9 +21,11 @@ html{
     font-size: 62.5%;
     overflow-x: hidden;
 }
+
 body{
     overflow-x: hidden;
 }
+
 header{
     width: 100%;
     display: flex;
@@ -33,4 +35,57 @@ header{
     top: 0; left: 0;
     z-index: 1000;
     padding: 2rem 7%;
+    background: var(--blue);
 }
+
+.logo{
+    color: white;
+    margin: 0;
+    padding: 0;
+}
+
+.logo img{
+    width: 10%;
+}
+
+.navbar ul{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    list-style: none;
+}
+
+.navbar ul li a{
+    font-size: 2rem;
+    margin-left: 2rem;
+    color: white;
+    position: relative;
+}
+
+.navbar ul li a::before{
+    content: '';
+    position: absolute;
+    bottom: .10rem; right: 0;
+    width: 0%;
+    height: .2rem;
+    background: white;
+    transition: .2s linear;
+}
+.navbar ul li a.active::before,
+.navbar ul li a:hover::before{
+    left: 0;
+    width: 100%;
+}
+#menu{
+    font-size: 3rem;
+    color: white;
+    cursor: pointer;
+    display: none;
+}
+
+
+
+
+
+
+/* media */
