--- a/css/styles.css
+++ b/css/styles.css
@@ -39,13 +39,9 @@ header{
 }
 
 .logo{
+    font-size: 2.5rem;
     color: white;
-    margin: 0;
-    padding: 0;
-}
-
-.logo img{
-    width: 10%;
+    font-weight: bold;
 }
 
 .navbar ul{
@@ -57,15 +53,15 @@ header{
 
 .navbar ul li a{
     font-size: 2rem;
-    margin-left: 2rem;
+    margin-left: 3rem;
     color: white;
-    position: relative;
+    position:relative;
 }
 
 .navbar ul li a::before{
     content: '';
     position: absolute;
-    bottom: .10rem; right: 0;
+    bottom:-.5rem; right: 0;
     width: 0%;
     height: .2rem;
     background: white;
@@ -89,3 +85,38 @@ header{
 
 
 /* media */
+
+@media (max-width:768px){
+
+    html{
+        font-size: 55%;
+    }
+    #menu{
+        display: block;
+    }
+    .navbar{
+        position: fixed;
+        top: -120%; left:0;
+        width: 100%;
+        background: white;
+        opacity: 0;
+    }
+    .navbar ul{
+        padding: 2rem 0;
+        flex-flow: column;
+        justify-content: center;
+    }
+    .navbar ul li a{
+        font-size: 2.5rem;
+        color: gray;
+        display: block;
+        margin: 1rem 0;
+    }
+    .fa-times{
+        transform: rotate(180deg);
+    }
+    .nav-toggle{
+        top:7.4rem;
+        opacity: 1;
+    }
+}
