--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,51 @@ body{
     overflow-x: hidden;
 }
 
+.btn{
+    font-size: 2rem;
+    padding: .7rem 3.5rem;
+    border-radius: 5rem;
+    color: white;
+    background: var(--blue);
+    margin-top: 1rem;
+    box-shadow: 0 .3rem .5rem rgba(0, 0, 0, .3);
+    cursor: pointer;
+    border: none;
+    overflow: hidden;
+    position: relative;
+    z-index: 0;
+}
+.btn::before{
+  content: '';  
+  position: absolute;  
+  top: 0; right: 0;
+  height: 100%;
+  width: 0%;
+  background:#333;
+  z-index: -1;
+  transition: .2s linear;
+}
+.btn:hover::before{
+    left: 0;
+    width: 100%;
+}
+
+.heading{
+    padding: .5rem 2rem;
+    font-size: 2rem;
+    background: rgba(0, 0, 0, .3);
+    color: var(--blue);
+    display: inline-block;
+    margin: 1rem 0;
+}
+.title{
+    font-size: 4rem;
+    color: #333;
+    padding: 0 1rem;
+    text-align: center;
+}
+
+/* header section */
 header{
     width: 100%;
     display: flex;
@@ -79,12 +124,155 @@ header{
     display: none;
 }
 
+/* home section */
+.home{
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    background: url(../images/homg-img.png) no-repeat; 
+    background-size: 140% 85%;
+    background-position: top;
+    padding: 1.5rem 7%;
+    padding-top: 4rem;
+}
+.home .image{
+    flex: 1 1 40rem;
+    padding-top: 6rem;
+}
+.home .image img{
+    width: 100%;
+}
+.home .content{
+    flex: 1 1 40rem;
+    padding-top: 5rem;
+}
+.home .content h1{
+    font-size: 4rem;
+    color: white;
+}
+.home .content p{
+    font-size: 1.8rem;
+    color: white;
+    padding: .5rem 0;
+}
+.home .content .btn{
+    background: white;
+    color: #333;
+}
+.home .content .btn:hover{
+    color: white;
+}
+
+/* about section */
+
+.about{
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    background:#333;
+    padding:2rem;
+    padding-top: 6rem;
+}
+
+.about .image{
+    flex:1 1 40rem;
+    text-align: center;
+    padding:4rem 0;
+}
+
+.about .image img{
+    height:50vh;
+}
+
+.about .content{
+    flex:1 1 40rem;
+}
+
+.about .content h3{
+    font-size: 4rem;
+    color:#fff;
+}
+
+.about .content .heading{
+    background:rgba(0,0,0,.3);
+}
+
+.about .content p{
+    font-size: 1.5rem;
+    color:#eee;
+    padding:1rem 0;
+}
+
+.about .content ul li{
+    list-style: none;
+    font-size: 2rem;
+    color:#fff;
+    padding:.5rem 0;
+}
+
+.about .content ul li i{
+    color:var(--blue);
+}
+
+/* features section */
+.features{
+    min-height: 100vh;
+    text-align: center;
+    padding-top: 7rem;
+}
+.features .description{
+    padding: 1rem 0;
+    margin: 0 auto;
+    width: 70rem;
+    color: #666;
+    font-size: 1.5rem;
+}
+.features .box-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.features .box-container .box{
+    margin:2rem;
+    width:28rem;
+    z-index: 0;
+    position: relative;
+}
+.features .box-container .box::before{
+    content: '';
+    position: absolute;
+    top:32.5%; left:50%;
+    transform: translate(-50%, -50%) rotate(45deg);
+    background:var(--blue);
+    height: 10rem;
+    width: 10rem;
+    z-index: -1;
+    box-shadow: 0 0 0 1rem rgba(0, 0, 255, .1);
+}
+.features .box-container .box i{
+    color:#fff;
+    font-size: 4.5rem;
+    margin:8rem 0;
+}
+.features .box-container .box h3{
+    color:#333;
+    font-size: 2rem;
+}
+.features .box-container .box p{
+    color:#666;
+    font-size: 1.2rem;
+    padding:1rem 0;
+}
 
 
 
 
-
-/* media */
+/* media responsive */
 
 @media (max-width:768px){
 
@@ -118,5 +306,26 @@ header{
     .nav-toggle{
         top:7.4rem;
         opacity: 1;
+    }
+    .home .content{
+        text-align: center;
+    }
+    .features .description{
+        width: auto;
+        padding: 1rem;
+    }
+}
+
+@media (max-width:500px){
+    html{
+        font-size: 50%;
+    }
+
+    .home .content h1{
+        font-size: 3.5rem;
+    }
+    .about .image img{
+        width: 90%;
+        height: auto;
     }
 }
