--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@
 *::selection{
     background: var(--blue);
     color: white;
+    background-color: #333;
 }
 
 html{
@@ -370,13 +371,103 @@ header{
     display: block;
 }
 
+/* comments */
+.comment{
+    min-height: 50vh;
+    text-align: center;
+    padding: 1rem;
+    background-color: #eee;
+}
+.testimonials{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction:column;
+    width:100%;
+}
+.testimonial-heading{
+    margin: 30px 0px;
+    padding: 10px 20px;
+    display: flex;
+    flex-direction:column;
+    justify-content: center;
+    align-items: center;
+}
+.testimonial-box-container{
+    padding: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap:wrap;
+    width:100%;
+}
+.testimonial-box{
+    width:550px;
+    box-shadow: 2px 2px 30px rgba(0,0,0,0.1);
+    background-color: #ffffff;
+    padding: 20px;
+    margin: 15px;
+    cursor: pointer;
+}
+.profile-img{
+    width:50px;
+    height: 50px;
+    border-radius: 50%;
+    overflow: hidden;
+    margin-right: 10px;
+}
+.profile-img img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+.profile{
+    display: flex;
+    align-items: center;
+}
+.name-user{
+    display: flex;
+    flex-direction: column;
+}
+.name-user strong{
+    color: #3d3d3d;
+    font-size: 1.1rem;
+    letter-spacing: 0.5px;
+}
+.name-user span{
+    color: #979797;
+    font-size: 0.8rem;
+}
+.reviews{
+    color: #f9d71c;
+}
+.box-top{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+}
+.client-comment p{
+    font-size: 0.9rem;
+    color: #4b4b4b;
+}
+.testimonial-box:hover{
+    transform: translateY(-10px);
+    transition: all ease 0.3s;
+}
+ 
+
+
+
 /* footer */
 
 .footer{
-    background:#eee;
+    background:white;
 }
 
 .footer .box-container{
+    background-color: white;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -436,6 +527,11 @@ header{
 
 
 
+
+
+
+
+
 /* media responsive */
 
 @media (max-width:768px){
@@ -460,9 +556,12 @@ header{
     }
     .navbar ul li a{
         font-size: 2.5rem;
-        color: gray;
+        color: #333;
         display: block;
         margin: 1rem 0;
+    }
+    .navbar ul li a::before{
+        background:#333;
     }
     .fa-times{
         transform: rotate(180deg);
@@ -484,6 +583,12 @@ header{
         width: auto;
         padding: 1rem;
     }
+    .testimonial-box{
+        width:100%;
+    }
+    .testimonial-heading h1{
+        font-size: 1.4rem;
+    }
 }
 
 @media (max-width:500px){
@@ -497,5 +602,18 @@ header{
     .about .image img{
         width: 90%;
         height: auto;
+    }
+    .box-top{
+        flex-wrap: wrap;
+        margin-bottom: 10px;
+    }
+    .reviews{
+        margin-top: 10px;
+    }
+}
+@media(max-width:1060px){
+    .testimonial-box{
+        width:45%;
+        padding: 10px;
     }
 }
