--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,6 @@
     outline: none;
     text-decoration: none;
     transition: all .2s linear;
-    text-transform: capitalize;
 }
 
 *::selection{
@@ -19,7 +18,7 @@
 }
 
 html{
-    font-size: 62.5%;
+    font-size: 65%;
     overflow-x: hidden;
 }
 
@@ -432,12 +431,12 @@ header{
 }
 .name-user strong{
     color: #3d3d3d;
-    font-size: 1.1rem;
+    font-size: 1.2rem;
     letter-spacing: 0.5px;
 }
 .name-user span{
     color: #979797;
-    font-size: 0.8rem;
+    font-size: 0.9rem;
 }
 .reviews{
     color: #f9d71c;
@@ -449,7 +448,7 @@ header{
     margin-bottom: 20px;
 }
 .client-comment p{
-    font-size: 0.9rem;
+    font-size: 1.1rem;
     color: #4b4b4b;
 }
 .testimonial-box:hover{
@@ -532,6 +531,9 @@ header{
 
 
 
+
+
+
 /* media responsive */
 
 @media (max-width:768px){
@@ -575,9 +577,13 @@ header{
     }
     .home .image{
         padding: 0;
+        display: block;
     }
     .home .image img{
-        width: 700px;
+        width: 0;
+    }
+    .product .box-container{
+        width: 100%;
     }
     .features .description{
         width: auto;
@@ -586,8 +592,10 @@ header{
     .testimonial-box{
         width:100%;
     }
-    .testimonial-heading h1{
-        font-size: 1.4rem;
+    .testimonial-box-container{
+        padding: 0;
+        width:200%;
+        display: block;
     }
 }
 
